--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Clean portfolio website",
   "main": "index.html",
   "scripts": {
-    "start": "node -e \"const http=require('http'),fs=require('fs'),path=require('path');const server=http.createServer((req,res)=>{let filePath=req.url==='/'?'index.html':req.url.slice(1);if(!filePath.includes('.')){filePath='index.html';}const extname=path.extname(filePath);let contentType='text/html';if(extname==='.css')contentType='text/css';if(extname==='.js')contentType='text/javascript';fs.readFile(filePath,(err,data)=>{if(err){res.writeHead(404);res.end('File not found');}else{res.writeHead(200,{'Content-Type':contentType});res.end(data);}});});server.listen(3000,()=>console.log('Server running on http://localhost:3000'));\""
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.0",
+    "nodemailer": "^7.0.3"
   }
 }
