--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Clean portfolio website",
+  "type": "module", 
   "main": "index.html",
   "scripts": {
     "start": "node index.js"
